lks-eks-cicd/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-api-svc
  namespace: wallet
  labels:
    app: wallet-api
    Project: nusantara-wallet
spec:
  type: LoadBalancer
  selector:
    app: wallet-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
